conditional rendering of table

--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -43,7 +43,7 @@
 
 
     <br>
-    <table border="1px solid black">
+    <table border="1px solid black" v-if='harvests.length'>
         <tr>
             <th>Row</th>
             <th>Date</th>
