--- a/farmdata2/farmdata2_modules/fd2_school/E2E/E2E.html
+++ b/farmdata2/farmdata2_modules/fd2_school/E2E/E2E.html
@@ -43,7 +43,7 @@
       <!-- move here -->
 
     <title>Title Field Example</title>
-    <h1>Harvest Report</h1>
+    <h1 data-cy="page-header">Harvest Report</h1>
     <p>This page is a <em>mockup</em> of a simplified harvest report</p>
     <label for="start">Start Date:</label>
     <input type="date" id="start" name="start-date" v-model="startDate" min="2014-01-01" max="2022-01-01" />
