--- a/farmdata2/farmdata2_modules/fd2_school/E2E/E2E.html
+++ b/farmdata2/farmdata2_modules/fd2_school/E2E/E2E.html
@@ -45,9 +45,9 @@
     <title>Title Field Example</title>
     <h1 data-cy="page-header">Harvest Report</h1>
     <p>This page is a <em>mockup</em> of a simplified harvest report</p>
-    <label for="start">Start Date:</label>
+    <label for="start" data-cy="start-date-label">Start Date:</label>
     <input type="date" id="start" name="start-date" v-model="startDate" min="2014-01-01" max="2022-01-01" />
-    <label for="end">End Date:</label>
+    <label for="end" data-cy="end-date-label">End Date:</label>
     <input type="date" id="end" name="end-date" v-model="endDate" value="20202-05-15" min="2020-05-05" max="2022-01-01" /><br />
     <hr />
     <h1>My Sample Harvest:</h1>
