added cypress test for crop drop down menu

--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -26,7 +26,7 @@
         </br>
        
         <label for="crop">Crop: </label>
-        <select id="crop" name="crop" v-model ="crop">
+        <select data-cy="crop-check" id="crop" name="crop" v-model ="crop">
             
             <option v-for="crop in cropNames"> {{ crop }}</option>
           </select>  
