First cypress test added to e2e, checks the intial state

--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -16,7 +16,7 @@
     </style> 
 </head>
 
-<h1>Harvest Report</h1>
+<h1 data-cy="page-header">Harvest Report</h1>
 <p><FONT COLOR="GREY"> This page is a <i>mockup</i> of a simplfied Harvest Report</FONT></p>
 <div id="pageInfo">
     <input type="text" value="Title:" v-model="rHeader"/>
