--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -11,11 +11,11 @@
             <br>
             <br>
             <label for="start">Start:</label>
-            <input type="date" id="start" name="start"  
+            <input type="date" id="start" name="start" data-cy="start-date"
             min="2014-01-01"  value="2020-05-05" v-bind:max="reportEndDate" v-model="reportStartDate"/>
             <label for="send">End:</label>
-            <input type="date" id="end" name="end" 
-             max="2022-01-01" value="2020-05-15" v-bind:min="reportStartDate" v-model="reportEndDate"/>
+            <input type="date" id="end" name="end" data-cy="end-date"
+            max="2022-01-01" value="2020-05-15" v-bind:min="reportStartDate" v-model="reportEndDate"/>
             <br>
             <br>
             <label for=”crops”>Crop:</label>
