--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -49,7 +49,16 @@
     <hr style="width:33%;margin-left:0">
     <div id="rHeader">
     <h1 data-cy="report-title">{{ (rHeaderInput!="") ? rHeader:"Mock Harvest Report"}}</h1>
-
+    <p><FONT COLOR="GREY"> Details:</FONT></p>
+    <ul>
+      <li data-cy="farm-name"><b>Farm:</b> {{ Farm }}</li>
+      <li data-cy="user-name"><b>User:</b> {{ User }}</li>
+      <li><b>Language:</b> <span data-cy="language-check"> {{ Language }} </span> </li>
+<br>
+      <li><b>Start:</b> {{ rStartDate }}</li>
+      <li><b>End:</b> {{ rEndDate }}</li>
+      <li><b>Crop:</b> Kale</li>
+    </ul>
     </div>
     <h3 v-if="tableData.length === 0"> No records to display </h3>
     <table v-if="tableData.length != 0"> 
@@ -104,9 +113,9 @@
           ],
           selectedArea: "",
 
-          farm: "",
-          user: "",
-          language: "",
+          Farm: "",
+          User: "",
+          Language: "",
 
           newData:'',
 
@@ -157,9 +166,9 @@
           saveReport: function(){
               axios.get('/farm.json')
               .then ((response) => {
-                this.farm=response.data.name;
-                this.user=response.data.user.name;
-                this.language=response.data.languages.en.name;
+                this.Farm=response.data.name;
+                this.User=response.data.user.name;
+                this.Language=response.data.languages.en.name;
               })
               .catch ((error) => {
                 console.log("Error Occurred")
