--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -1,5 +1,5 @@
 <html> 
-<h1>Harvest Report</h1>
+<h1 data-cy="page-header">Harvest Report</h1>
     <div id="sample-report" v-cloak>
         <body>
             <p>This page is a simple <i>mockup</i> of a simplified harvest report.</p>
