check default start and end date in e2e.defaults.spec.js

--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -16,13 +16,13 @@
         <form>
           <label>
             Start:
-            <input type="date" v-model="reportStartDate" 
+            <input data-cy="start-date" type="date" v-model="reportStartDate" 
             min="2014-01-01" :disabled="reportStartDate>reportEndDate"
             max="2022-01-01" :disabled="reportStartDate>reportEndDate">
           </label>
           <label>
             End:
-            <input type="date" v-model="reportEndDate"
+            <input data-cy="end-date" type="date" v-model="reportEndDate"
             min="2020-05-05" :disabled="reportStartDate>reportEndDate"
             max="2022-01-01" :disabled="reportStartDate>reportEndDate">
           </label>
