chck crop-dropdown in e2e.defaults.spec.js

--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -29,7 +29,7 @@
         </form>
         <br>
         <label for="crop">Crop</label>
-        <select id="crop" v-model="reportCrop">
+        <select data-cy="crop-dropdown" id="crop" v-model="reportCrop">
           <option v-for="crop in cropNamesArray">{{crop}}</option>
         </select>
         <label for="field">Area</label>
