--- a/farmdata2/farmdata2_modules/fd2_school/E2E/E2E.html
+++ b/farmdata2/farmdata2_modules/fd2_school/E2E/E2E.html
@@ -17,7 +17,7 @@
         <option v-for="area in areas" :value="area">{{ area }}</option>
       </select>
       <h1 v-cloak>Harvest Report</h1>
-      <button class="btn btn-primary" @click="generateReport">Generate Report</button>
+      <button class="btn btn-primary" data-cy="generate-report-button" @click="generateReport">Generate Report</button>
 
       <table border=1>
         <thead>
@@ -50,7 +50,7 @@
     <label for="end">End Date:</label>
     <input type="text" id="end" data-cy="end-date-label" name="end-date" v-model="endDate" value="05/15/2020" min="05/05/2020" max="01/01/2022" /><br />
     <hr />
-    <h1>My Sample Harvest:</h1>
+    <h1 data-cy="report-header">My Sample Harvest:</h1>
     <p>Details:</p>
     <label for="title">Title:</label>
     <input type="text" id="title" name="title" placeholder="Enter the title" />
