--- a/farmdata2/farmdata2_modules/fd2_school/E2E/E2E.html
+++ b/farmdata2/farmdata2_modules/fd2_school/E2E/E2E.html
@@ -3,11 +3,11 @@
       <input type="text" v-model="reportTitle" placeholder="Enter report title">
       <h1 v-cloak>{{ reportTitle ? reportTitle : "Mock Harvest Report" }}</h1>
         <label for="farm">Farm:</label>
-        <input type="text" id="farm" v-model="farm" placeholder="Enter your farm here.">
-        <label for="user">User:</label>
-        <input type="text" id="user" v-model="user" placeholder="Enter user name.">
+        <input type="text" data-cy="farm-name" id="farm" v-model="farm" placeholder="Enter your farm here.">
+        <label for="user" >User:</label>
+        <input type="text" data-cy="user-name" id="user" v-model="user" placeholder="Enter user name.">
         <label for="language">Language</label>
-        <input type="text" id="language" v-model="language" placeholder="Enter language.">
+        <input type="text" data-cy="user-lang"id="language" v-model="language" placeholder="Enter language.">
       <label for="crops">Crop:</label>
       <select name="crops" id="crops" v-model="selectedCrop" data-cy="crop-dropdown">
         <option v-for="crop in cropNames" :value="crop">{{ crop }}</option>
