Added tests for Harvest Report Crop List

--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -13,7 +13,7 @@
     
     <br><br>
     <label for="rptCrop">Crop</label> 
-    <select  v-model="rptCrop">
+    <select  v-model="rptCrop" data-cy="crop-dropdown">
         <option v-for="crop in cropNames">{{crop}}</option>
     </select>
 
