--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -7,7 +7,7 @@
     <body>
         <div id="report-title" v-cloak>
             <br>
-            <h1>Harvest Report</h1>
+            <h1 data-cy="page-header">Harvest Report</h1>
             <p>This page is a <i>mockup</i> simplified harvest report</p>
             <p>
             <label for="title">Title:</label>
