Tested default start and end date in e2e

--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -15,6 +15,7 @@
             <p>
             <label for="start">Start:</label>
             <input 
+                data-cy="start-date"
                 type="date" 
                 id="start" 
                 v-model="reportStartDate" 
@@ -24,6 +25,7 @@
             >
             <label for="end">End:</label>
             <input 
+                data-cy="end-date"
                 type="date" 
                 id="end" 
                 v-model="reportEndDate" 
