Tested crop dropdown options in e2e

--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -36,7 +36,7 @@
             </p>
             <p>
             <label for="crop">Crop:</label>
-            <select id="crop" v-model="reportCrop">
+            <select data-cy="crop-dropdown" id="crop" v-model="reportCrop">
                 <option v-for="crop in cropNamesArray">{{crop}}</option>
             </select>
             <label for="area">Area:</label>
