--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -44,9 +44,9 @@
                 <option v-for="area in areas">{{area}}</option>
             </select>
             </p>
-            <input type="button" value="Generate Report" @click="generateReportButton"/>
+            <input data-cy="generate-report-button" type="button" value="Generate Report" @click="generateReportButton"/>
             <hr>
-            <h1>{{reportTitle ? reportTitle: "Mock Harvest Report"}}</h1>
+            <h1 data-cy="report-title">{{reportTitle ? reportTitle: "Mock Harvest Report"}}</h1>
             <p>Details:</p>
             <ul>
                 <li><strong>Farm:</strong>{{Farm}}</li>
