--- a/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
+++ b/farmdata2/farmdata2_modules/fd2_school/e2e/e2e.html
@@ -32,9 +32,9 @@
 <p>
     Details:
     <ul>
-        <li><b>Farm</b>:{{farm}}</li>
-        <li><b>User</b>:{{user}}</li>
-        <li><b>Language</b>:{{language}}</li>
+        <li data-cy="farm-name"><b>Farm</b>:{{farm}}</li>
+        <li data-cy="user-name"><b>User</b>:{{user}}</li>
+        <li><b>Language</b>:<span data-cy="language">{{language}}</span></li>
         <br> 
         <li><b>Start</b>:{{rptStartDate}}</li>
         <li><b>End</b>:{{rptEndDate}}</li>
